pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: first-pod
  labels:
    env: dev
spec:
  containers: 
    - name: c1
      image: nginx

#kubectl run pod-1 --image=nginex

---
apiVersion: v1
kind: Service
metadata:
  name: svc-first-pod
spec:
  selector:
   env: dev
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
  type: NodePort
