service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
spec:
  selector:
    app: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
